
//请求登录
message	cs_account_login[id=10001]{
	required	int32		userID			=1;//平台用户ID
	required	int32		unixTime		=2;//unix时间戳
	required	string		accountName		=3;//平台用户账号
	required	string		ticket			=4;//验证密钥
	required    int16       serverID        =5;//服务器ID
}

message	sc_account_login[id=10002]{
	required	int8		result			=1;//
	// 1 => 成功
	// 2 => key错误
	// 3 => key超时
	// 4 => 已经登录
	// 5 => 登录的服务器id不符
	// 6 => 服务器人生已满
	required	bool		isCreate		=2;//true=已经创建主公，false=未创建主公
}

//创建角色
message	cs_account_create[id=10003]{
	required	string		roleName			=1;//名字
	required	int8		modelID				=2;//模型
}

message	sc_account_create[id=10004]{
	required	int8		result				=1;//结果
	//1 => 创建成功
	//2 => 角色名称已经被使用
	//3 => 非法字符
	//4 => 角色名称长度为2~6个汉字
	//5 => 用户已经创建角色
	//6 => 没有这个模型
	//7 => 没有登录
}

//强制下线通知
message sc_account_kick[id=10005]{
	required	int8		reason				=1;//原因
	//1 => 帐号在别处登录
	//2 => 帐号被封禁
	//3 => 服务器人数已满
}

//心跳包
message	cs_account_heart[id=10006]{
}
message	sc_account_heart[id=10007]{
	required	int32		unixTime			=1;//当前服务器时间
}

//注销登录
message	cs_account_logout[id=10008]{
}