//消息注释
messge cs_test[id=1001]{
	//字段注释1
	required	int32	ID =1;
	required	string	name=2;
	optional	bool	bList=3;
	optional	string	addrList=4;
	required	p_test tt=5;
	optional	p_test tts=6;
}

message p_test[id=1002]{
	required	uint16 size=1;
	required	int32	a=2;
	required	int32	b=2;
	required	int32	c=2;
	required	int32	d=2;
	required	int32	e=2;
	required	int32	f=2;
	required	int32	i=2;
	required	int32	j=2;
}


